--- a/index.html
+++ b/index.html
@@ -521,11 +521,12 @@ data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","m
 <div class="image-box"><img src="images/s1.jpeg" alt=""></div>
 <div class="lower-content">
 <div class="info"><span class="flaticon-vertical-bookmark"></span><a href="stalls.html">Designer Stalls</a></div>
-<h4>•   Outstanding design <br>
-•   Creative Stand Designs<br>
-•   Available in various sizes<br>
-•   Economical price range<br>
-•   Modern graphic designing<br>
+<h4>•   Area &#8594; 12 sq.m <br>
+•   Table &#8594; 2<br>
+•   Chair &#8594; 5<br>
+•   Spotlight &#8594; 4<br>
+•   Plugpoint &#8594; 2<br>
+•   Dustbin &#8594; 1<br>
 </h4>
 </div>
 </div>
@@ -536,10 +537,12 @@ data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","m
 <div class="image-box"><img src="images/s2.jpeg" alt=""></div>
 <div class="lower-content">
 <div class="info"><span class="flaticon-vertical-bookmark"></span><a href="stalls.html">Pop-up Stalls</a></div>
-<h4>•   Portable <br>
-•   Various Styles <br>
-•   Multiple  Materials <br>
-•   Different Sizes <br>
+<h4>•   Area &#8594; 9 sq.m <br>
+•   Table &#8594; 1<br>
+•   Chair &#8594; 3<br>
+•   Spotlight &#8594; 2<br>
+•   Plugpoint &#8594; 1<br>
+•   Dustbin &#8594; 1<br>
 </h4>
 </div>
 </div>
@@ -550,11 +553,12 @@ data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","m
 <div class="image-box"><img src="images/s3.jpeg" alt=""></div>
 <div class="lower-content">
 <div class="info"><span class="flaticon-vertical-bookmark"></span><a href="stalls.html">Octonorm Stalls</a></div>
-<h4>•   Stall Fascia <br>
-•   Portable One Table <br>
-•   Two Folding Chairs <br>
-•   One Power Point <br>
-•   Three spot Lights <br>
+<h4>•   Area &#8594; 18 sq.m <br>
+•   Table &#8594; 3<br>
+•   Chair &#8594; 7<br>
+•   Spotlight &#8594; 4<br>
+•   Plugpoint &#8594; 2<br>
+•   Dustbin &#8594; 1<br>
 </h4>
 </div>
 </div>
@@ -564,10 +568,12 @@ data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","m
 <div class="image-box"><img src="images/s4.png" alt="" style="margin-bottom: 10px;margin-top: 15px;"></div>
 <div class="lower-content">
 <div class="info"><span class="flaticon-vertical-bookmark"></span><a href="stalls.html">Customized Stalls</a></div>
-<h4>•   Stall Fascia <br>
-•   Awsome Designs <br>
-•   Various Sizes <br>
-•   Customizable <br>
+<h4>•   Area &#8594; 24 sq.m <br>
+•   Table &#8594; 4<br>
+•   Chair &#8594; 10<br>
+•   Spotlight &#8594; 4<br>
+•   Plugpoint &#8594; 2<br>
+•   Dustbin &#8594; 1<br>
 </h4>
 </div>
 </div>
